--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
 
-<main id="main" class="my-5 py-5">
+
+<main id="main"  class="pb-5 mb-5" >
      <router-outlet></router-outlet>
 </main>
 
-<app-footer></app-footer>
+
