--- a/src/app/main/about/about.component.html
+++ b/src/app/main/about/about.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
     <!-- About Section - Home Page -->
     <section id="about" class="about">
 
@@ -54,3 +54,6 @@
       </div>
 
     </section><!-- End About Section -->
+
+
+    <app-footer></app-footer>
