--- a/src/app/main/features/features.component.html
+++ b/src/app/main/features/features.component.html
@@ -1,4 +1,4 @@
-    <!-- Features Section - Home Page -->
+<app-header></app-header>  <!-- Features Section - Home Page -->
     <section id="features" class="features">
 
       <!--  Section Title -->
@@ -45,3 +45,4 @@
       </div>
 
     </section><!-- End Features Section -->
+    <app-footer></app-footer>
