--- a/src/app/main/hero/hero.component.html
+++ b/src/app/main/hero/hero.component.html
@@ -1,4 +1,4 @@
-    <!-- Hero Section - Home Page -->
+<app-header></app-header> <!-- Hero Section - Home Page -->
     <section id="hero" class="hero">
 
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
@@ -55,3 +55,4 @@
     </div>
 
   </section><!-- End Clients Section -->
+  <app-footer></app-footer>
