--- a/src/app/main/pricing/pricing.component.html
+++ b/src/app/main/pricing/pricing.component.html
@@ -1,5 +1,5 @@
     <!-- Pricing Section - Home Page -->
-    <section id="pricing" class="pricing">
+    <app-header></app-header>  <section id="pricing" class="pricing">
 
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -71,3 +71,4 @@
       </div>
 
     </section><!-- End Pricing Section -->
+    <app-footer></app-footer>
