--- a/src/app/main/state/state.component.html
+++ b/src/app/main/state/state.component.html
@@ -1,4 +1,4 @@
-  <!-- Stats Section - Home Page -->
+<app-header></app-header><!-- Stats Section - Home Page -->
   <section id="stats" class="stats">
 
     <img src="assets/img/stats-bg.jpg" alt="" data-aos="fade-in">
@@ -40,3 +40,4 @@
     </div>
 
   </section><!-- End Stats Section -->
+  <app-footer></app-footer>
