--- a/src/app/main/contact/contact.component.html
+++ b/src/app/main/contact/contact.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
     <!-- Contact Section - Home Page -->
     <section id="contact" class="contact">
 
@@ -92,3 +92,4 @@
       </div>
 
     </section><!-- End Contact Section -->
+    <app-footer></app-footer>
