--- a/src/app/main/services/services.component.html
+++ b/src/app/main/services/services.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
     <!-- Services Section - Home Page -->
     <section id="services" class="services">
 
@@ -78,3 +78,4 @@
       </div>
 
     </section><!-- End Services Section -->
+    <app-footer></app-footer>
